--- a/recette2.css
+++ b/recette2.css
@@ -1,4 +1,4 @@
-*shadow {
+    *shadow {
     overflow: auto;
 }
 
@@ -25,8 +25,8 @@ div.categorie {
 
 div.contenu {
     background-color: white;
-    margin: 60px 10% 80px 10%;
-    padding: 0px 30px 30px 30px;
+    margin: 40px 8px 40px 8px;
+    padding: 0px 8px 20px 8px;
     min-width: 350px;
     box-shadow: 0px 0px 8px 8px rgba(0, 0, 0, 0.1);
     overflow: visible;
@@ -64,40 +64,40 @@ div.description {
     margin-right: auto;
 }
 
+div.info {
+    position: relative;
+}
+
 table.info {
     position: absolute;
     bottom: 0;
     width: 100%;
     color: white;
     background-color: #6c829dc0;
-    height: 80px;
-}
-
-div.info {
-    position: relative;
+    height: 50px;
 }
 
 table.info td {
     text-align: center;
-    font-size: 14px;
+    font-size: 12px;
     vertical-align: top;
-    padding-top: 8px;
 }
 
 table.info th {
-    font-size: 16px;
+    font-size: 14px;
     vertical-align: bottom;
+    padding-bottom: 8px;
 }
 
 img.info {
-    /*display: block"; */
+    /*display: block"; 
     object-fit: cover;
     /*max-height: 400px;
     min-height: 200px;*/
 }
 
 div.colonne {
-    width: 45%;
+    width: 100%;
     margin-top: 20px;
 }
 
@@ -111,11 +111,6 @@ div.colonne h2 {
 
 div.colonne1 {
     display: inline-block;
-    margin-right: 10%;
-}
-
-div.colonne2 {
-    float: right;
 }
 
 .tableau1 p {
@@ -154,3 +149,36 @@ table.preparation td.preparation_etape {
 table.preparation tr {
     height: 40px;
 }
+
+@media only screen and (min-width: 768px) {
+    div.contenu {
+        margin: 60px 10% 80px 10%;
+        padding: 0px 30px 30px 30px;
+        min-width: 350px;
+    }
+    table.info {
+        height: 80px;
+    }
+    table.info td {
+        font-size: 14px;
+    }
+    table.info th {
+        font-size: 16px;
+    }
+    div.colonne {
+        width: 45%;
+    }
+    div.colonne1 {
+        margin-right: 10%;
+    }
+    div.colonne2 {
+        float: right;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    div.contenu {
+        margin-left: auto;
+        margin-right: auto;
+        width: 645px;
+    }
